# wwsvc-mock

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: coverage.yml  docker.yml
data/: artikel_art_nr.json  artikel_art_nr_clean.json
src/: app_config.rs  lib.rs  main.rs
src/routes/: exec_json.rs  mod.rs  service_pass.rs
tests/: functions.rs  register.rs
tests/common/: mod.rs
